# snow_engine

./: .gitignore  Cargo.toml
editor/: Cargo.toml
editor/src/: main.rs
engine/: Cargo.toml
engine/resources/shaders/: default.frag
engine/src/: lib.rs  platform.rs
engine/src/platform/: vulkan.rs  window.rs
engine/src/platform/vulkan/: vk_core.rs  vk_shader.rs  vk_surface.rs
src/: main.rs
src/graphics/: command_buffer.rs  mod.rs  render_pass.rs  window.rs
