[package]
name = "snow_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# feature for HasDisplayHandle trait
winit = { version = "0.29.15", features = ["rwh_05"] }
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
anyhow = "1.0.81"
